# jt3

./: .gitignore  README.md  jt3.session.sql  pyproject.toml
.github/: copilot-instructions.md
docs/specs/: feat-answer-graph.md  feat-batch-scraper-notebook.md  feat-duckdb-storage.md  feat-embedding-storage.md  feat-embeddings-module.md  feat-embeddings.md  feat-episode-scraper.md  feat-lookup-module.md  feat-nearest-centroid.md  feat-response-similarity-notebook.md  feat-season-scraper.md  feat-sqlmagic-notebook.md  fix-nearest-centroid-con-param.md  refactor-embeddings-schema.md  refactor-full-rewrite-embeddings.md  refactor-pipeline-structure.md
notebooks/: embed_clues.ipynb  explore_data.ipynb  explore_embeddings.ipynb  generate_embeddings.ipynb  lookup_embeddings.ipynb  lookup_response_embeddings.ipynb  scrape_episodes.ipynb  see_tables.ipynb  sql_sandbox.ipynb
scripts/: centroid_search.py  generate_embeddings.py  lookup_embeddings.py  search.py  show_table.py
scripts/embeddings/: categories.py  clues.py  complete.py  full_context.py  generate.py  responses.py
scripts/scraping/: scrape.py
src/jt3/: __init__.py  crawler.py  db.py  embeddings.py  enrichment.py  evaluator.py  graph.py  lookup.py  models.py  scraper.py
src/jt3/embeddings/: __init__.py  config.py  db.py  generator.py
src/jt3/scraping/: __init__.py  crawler.py  db.py  scraper.py
tests/: test_crawler.py  test_db.py  test_embeddings.py  test_embeddings_db.py  test_enrichment.py  test_evaluator.py  test_graph.py  test_import.py  test_lookup.py  test_models.py  test_scraper.py  test_scraping_db.py
tests/fixtures/: sample_game.html  sample_season.html  sample_seasons_list.html
