[project]
name = "jt3"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "duckdb>=1.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "ipython>=8.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"