[project]
name = "jt3"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "duckdb>=1.0",
    "tqdm>=4.60",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "ipython>=8.0",
    "ipykernel>=6.0",
]
graph = [
    "sentence-transformers>=2.0",
    "spacy>=3.0",
    "anthropic>=0.20",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
