[project]
name = "jt3"
version = "0.1.0"
description = "A Python project"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "duckdb>=1.0",
    "tqdm>=4.60",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.8",
    "jupysql>=0.11.1",
    "duckdb-engine>=0.17.0",
    "sqlalchemy>=2.0.49",
    "sentence-transformers[onnx-gpu]>=4.0",
    "polars>=1.0",
    "pyarrow>=23.0.1",
    "pandas>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "ipython>=8.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
